<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/app_name"
    app:startDestination="@id/listProductFragment">

    <fragment
        android:id="@+id/listProductFragment"
        android:name="cvb.com.br.petshop.ui.fragment.ListProductFragment"
        android:label="@string/frag_list_product_title"
        tools:layout="@layout/fragment_list_product">
        <action
            android:id="@+id/action_listProductFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_listProductFragment_to_listPurchaseInProgressFragment"
            app:destination="@id/listPurchaseInProgressFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="cvb.com.br.petshop.ui.fragment.ProductDetailFragment"
        android:label="@string/frag_product_detail_title"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="PRODUCT"
            app:argType="cvb.com.br.petshop.data.model.Product" />
        <action
            android:id="@+id/action_productDetailFragment_to_listPurchaseInProgressFragment"
            app:destination="@id/listPurchaseInProgressFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/listProductFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/listPurchaseInProgressFragment"
        android:name="cvb.com.br.petshop.ui.fragment.ListPurchaseInProgressFragment"
        android:label="@string/frag_purchase_in_progress_title"
        tools:layout="@layout/fragment_list_purchase_in_progress"></fragment>
</navigation>