<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ListProductFragment">

    <ImageView
        android:id="@+id/ivProd"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue_dark"
        android:contentDescription="@string/product_image"
        android:padding="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProd"
        tools:text="Product Description" />

    <View
        android:id="@+id/viewLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <TextView
        android:id="@+id/tvInfoProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/frag_product_detail_info_prod"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine1" />

    <TextView
        android:id="@+id/tvInfoPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/frag_product_detail_info_price"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvInfoWeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoProd" />

    <TextView
        android:id="@+id/tvInfoWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/frag_product_detail_info_weight"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvInfoQuantity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvInfoPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoProd" />

    <TextView
        android:id="@+id/tvInfoQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/frag_product_detail_info_quantity"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvInfoWeight"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoProd" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvWeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoPrice"
        tools:text="Preço" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvQuantity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoPrice"
        tools:text="Peso" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvWeight"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoPrice"
        tools:text="Estoque" />

    <View
        android:id="@+id/boxItem"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <ImageView
        android:id="@+id/ivDecrease"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:contentDescription="@string/frag_product_detail_info_decrease"
        android:scaleType="fitXY"
        android:src="@drawable/ic_minus"
        app:layout_constraintBottom_toBottomOf="@+id/boxItem"
        app:layout_constraintStart_toStartOf="@+id/boxItem"
        app:layout_constraintTop_toTopOf="@+id/boxItem" />

    <TextView
        android:id="@+id/tvPurchaseQtd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:maxLength="2"
        android:text="@string/frag_product_detail_qtd_default"
        android:textColor="@color/red"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/boxItem"
        app:layout_constraintStart_toEndOf="@+id/ivDecrease"
        app:layout_constraintTop_toTopOf="@+id/boxItem" />

    <ImageView
        android:id="@+id/ivIncrease"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:contentDescription="@string/frag_product_detail_info_decrease"
        android:scaleType="fitXY"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@+id/boxItem"
        app:layout_constraintStart_toEndOf="@+id/tvPurchaseQtd"
        app:layout_constraintTop_toTopOf="@+id/boxItem" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:text="@string/frag_product_detail_total"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivIncrease"
        app:layout_constraintTop_toTopOf="@+id/boxItem" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAddProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_car_plus"
        android:text="@string/frag_product_detail_add_product"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/boxItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivIncrease" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btPurchase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:drawableStart="@drawable/ic_car_go"
        android:text="@string/frag_product_detail_view_shop_items"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>