<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ListPurchaseInProgressFragment">

    <TextView
        android:id="@+id/tvEmptyPurchase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/frag_purchase_in_progress_empty_list"
        android:textColor="@color/blue_dark"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBase"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewTopBox"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/frag_purchase_in_progress_purchase_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/viewTopBox"
            app:layout_constraintStart_toStartOf="@+id/viewTopBox"
            app:layout_constraintTop_toTopOf="@+id/viewTopBox" />

        <TextView
            android:id="@+id/tvInfoPurchaseID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/frag_purchase_in_progress_purchase_id"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tvInfoPurchaseDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/viewTopBox"
            app:layout_constraintTop_toBottomOf="@+id/tvInfo" />

        <TextView
            android:id="@+id/tvInfoPurchaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/frag_purchase_in_progress_purchase_date"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/viewTopBox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvInfoPurchaseID"
            app:layout_constraintTop_toBottomOf="@+id/tvInfo" />

        <TextView
            android:id="@+id/tvPurchaseID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvPurchaseDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/viewTopBox"
            app:layout_constraintTop_toBottomOf="@+id/tvInfoPurchaseID"
            tools:text="Nº da Transação" />


        <TextView
            android:id="@+id/tvPurchaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/viewTopBox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPurchaseID"
            app:layout_constraintTop_toBottomOf="@+id/tvInfoPurchaseID"
            tools:text="Data" />

        <TextView
            android:id="@+id/tvProdSelected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/frag_purchase_in_progress_selected_products"
            android:textColor="@color/blue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewTopBox" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/viewBottomBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProdSelected"
            tools:listitem="@layout/item_purchase_item_list" />

        <View
            android:id="@+id/viewBottomBox"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/frag_product_detail_total"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/viewBottomBox"
            app:layout_constraintStart_toStartOf="@+id/viewBottomBox"
            app:layout_constraintTop_toTopOf="@+id/viewBottomBox" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btPurchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawableStart="@drawable/ic_money"
            android:text="@string/frag_purchase_in_progress_finish"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>